--- a/.github/workflows/wps.yaml
+++ b/.github/workflows/wps.yaml
@@ -13,12 +13,21 @@ jobs:
         steps:
             - name: Checkout codes
               uses: actions/checkout@v2
-            - name: Use Node.js
-              uses: actions/setup-node@v1
+            - name: 'Set up Python'
+              uses: actions/setup-python@v1
               with:
-                node-version: '12.x'
-           
-           - name: "运行 WPS自动邀请"
-              run: python3 function/wps_invitation.py
+                python-version: 3.7
+            - name: "运行 WPS自动邀请"
+              run: python3 test.py
               env:
                 WPS_KEY: ${{ secrets.WPS_KEY }}
+            - name: Commit files
+              run: |
+                git config --local user.email "action@github.com"
+                git config --local user.name "GitHub Action"
+                git add .
+                git commit -m "$(date +%Y%m%d%H%M%S)" -a
+            - name: 'Push changes'
+              uses: ad-m/github-push-action@master
+              with:
+                github_token: ${{ secrets.TOKEN }}
